--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
     </div>
 
     <!-- STEP 1: Load the Nostalgist.js library from CDN -->
-    <!-- This will likely be blocked in the preview, but should work on an unblocked external site. -->
-    <script src="https://unpkg.com/nostalgist@latest/dist/nostalgist.umd.js"></script>
+    <!-- Switched to jsDelivr CDN -->
+    <script src="https://cdn.jsdelivr.net/npm/nostalgist@latest/dist/nostalgist.umd.js"></script>
 
     <script>
         document.addEventListener('DOMContentLoaded', () => {
@@ -115,8 +115,7 @@
                             <p class="text-sm mt-2">Possible Issues:</p>
                             <ul class="list-disc list-inside text-left mx-auto max-w-xs text-gray-300 mt-2">
                                 <li>**Missing ROM:** Is **${YOUR_ROM_FILENAME}** uploaded to your GitHub repo root?</li>
-                                
-**Core/Assets:** The Core failed to download (this requires a network connection to the CDN).
+                                <li>**Core/Assets:** The core failed to download (this requires a network connection to the CDN).</li>
                             </ul>
                             <p class="text-xs mt-3 text-red-400">Error Detail: ${error.message}</p>
                         </div>
