--- a/index.html
+++ b/index.html
@@ -17,14 +17,13 @@
             font-family: monospace;
             flex-direction: column;
         }
-        /* This is the container where the emulator canvas will be placed */
         #nostalgist-container {
-            width: 800px; /* Set a default size */
+            width: 800px;
             height: 600px;
             max-width: 90vw;
             max-height: 90vh;
             box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
-            border: 4px solid #4CAF50; /* Green border for a retro look */
+            border: 4px solid #4CAF50;
         }
     </style>
 </head>
@@ -36,17 +35,17 @@
 
     <script>
         async function launchEmulator() {
-            // THE FILENAME HAS BEEN UPDATED HERE:
             const romFilename = 'dirtyhands.bin';
 
             try {
-                // The Nostalgist.megadrive() API is used for Sega Genesis/Mega Drive.
                 await Nostalgist.megadrive(romFilename, {
-                    // Tell Nostalgist to place the emulator inside our container div
-                    element: document.getElementById('nostalgist-container')
+                    element: document.getElementById('nostalgist-container'),
+                    // FIX FOR 403 ERROR: Explicitly set CDN to a reliable source
+                    retroarchConfig: {
+                        cdnUrl: 'https://cdn.jsdelivr.net/npm/nostalgist@latest/dist/'
+                    }
                 });
                 
-                // Remove the "Loading" header once the game is running
                 document.querySelector('h1').style.display = 'none';
                 console.log(`Sega Genesis game (${romFilename}) launched successfully!`);
                 
