--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             max-width: 90vw;
             max-height: 90vh;
             box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
-            border: 4px solid #4CAF50; /* Retro green border */
+            border: 4px solid #4CAF50;
         }
     </style>
 </head>
@@ -30,6 +30,8 @@
     <h1>Loading Dirtyhands...</h1>
     <div id="game-container"></div>
     
-    <script type="module" src="./index.js"></script> 
+    <script src="https://unpkg.com/nostalgist"></script> 
+
+    <script src="./index.js"></script> 
 </body>
 </html>
