--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dirtyhands - Sega Genesis</title>
     <style>
+        /* Basic styling for the emulator container */
         body {
             display: flex;
             justify-content: center;
@@ -22,7 +23,7 @@
             max-width: 90vw;
             max-height: 90vh;
             box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
-            border: 4px solid #4CAF50;
+            border: 4px solid #4CAF50; /* Retro green border */
         }
     </style>
 </head>
